# rocket_failure

./: .rustfmt.toml  Cargo.toml  README.md  test.py
examples/: fileserver.rs  server.rs
src/: errors.rs  lib.rs  macros.rs
